--- a/index.html
+++ b/index.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>titulo do site</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <main>
         <header>
-            <h1>Titulo do site</h1>
+            <h1>Titulo 1</h1>
         </header>
         <article>
             <h2>Artigo 001</h2>
