inserir menu e cor de fundo

--- a/index.html
+++ b/index.html
@@ -3,13 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>titulo do site</title>
+    <title>Spotify Imersão</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <nav>
+        <img src="imagens/capa-agora-voce-pode-customizar-a-capa-de-playlists-no-spotify-peq.jpg" alt="logo Spotify">
+        <ul>
+            <li>inicio</li>
+            <li>buscar</li>
+        </ul>
+    </nav>
     <main>
         <header>
-            <h1>Titulo 1</h1>
+            <h1>Sua Biblioteca</h1>
         </header>
         <article>
             <h2>Artigo 001</h2>
