adcionei classe menu

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <nav>
         <img src="imagens/capa-agora-voce-pode-customizar-a-capa-de-playlists-no-spotify-peq.jpg" alt="logo Spotify">
-        <ul>
+        <ul class="menu">
             <li>inicio</li>
             <li>buscar</li>
         </ul>
